--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000</color>
     <color name="blue">#1906A7</color>
     <color name="green">#006627</color>
+    <color name="gray">#808080</color>
 </resources>
