--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="size_8">8sp</dimen>
     <dimen name="size_20">20sp</dimen>
     <dimen name="size_17">17sp</dimen>
+    <dimen name="size_16">16sp</dimen>
+    <dimen name="size_70">70sp</dimen>
 </resources>
