Redesign of item_view

--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/size_17">
+    android:layout_marginBottom="@dimen/size_17"
+    app:cardCornerRadius="10sp"
+    app:cardElevation="@dimen/size_20"
+    android:background="@color/cardViewBackground"
+    android:layout_marginStart="@dimen/size_8"
+    android:layout_marginEnd="@dimen/size_8"
+    android:layout_marginTop="@dimen/size_8">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/size_8"
+    android:layout_marginEnd="@dimen/size_8">
 
     <TextView
         android:layout_width="match_parent"
@@ -14,10 +26,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="@dimen/size_8"
-        android:layout_marginTop="@dimen/size_8"
+        android:layout_marginEnd="@dimen/size_8"
         tools:text="Result"
         android:textSize="@dimen/size_20"
-        android:textColor="@color/blue"
+        android:textColor="@color/titleColor"
         />
 
     <TextView
@@ -27,10 +39,11 @@
         app:layout_constraintTop_toBottomOf="@id/textView_searchResult"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="@dimen/size_8"
+        android:layout_marginEnd="@dimen/size_8"
         android:layout_marginTop="@dimen/size_8"
         tools:text="URL link"
         android:textSize="@dimen/size_17"
-        android:textColor="@color/green"
+        android:textColor="@color/linkColor"
         />
 
     <TextView
@@ -41,9 +54,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="@dimen/size_8"
         android:layout_marginTop="@dimen/size_8"
+        android:layout_marginEnd="@dimen/size_8"
+        android:paddingBottom="@dimen/size_8"
         tools:text="HTML snippet"
         android:textSize="@dimen/size_17"
         android:textColor="@color/gray"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
