--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="black">#000</color>
-    <color name="blue">#1906A7</color>
-    <color name="green">#006627</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#0f0f0f</color>
+    <color name="colorAccent">#6a1b9a</color>
+    <color name="titleColor">#38006b</color>
+    <color name="linkColor">#ae52d4</color>
     <color name="gray">#808080</color>
+    <color name="cardViewBackground">#fafafa</color>
 </resources>
